============================

*Release date: XXXX-XX-XX*

Core and Builtins
-----------------

- Issue #23629: Fix the default __sizeof__ implementation for variable-sized
  objects.

- Issue #23055: Fixed a buffer overflow in PyUnicode_FromFormatV.  Analysis
  and fix by Guido Vranken.

- Issue #23048: Fix jumping out of an infinite while loop in the pdb.

Library
-------

- Issue #23615: Module tarfile is now can be reloaded with imp.reload().

- Issue #22853: Fixed a deadlock when use multiprocessing.Queue at import time.
  Patch by Florian Finkernagel and Davin Potts.

- Issue #23476: In the ssl module, enable OpenSSL's X509_V_FLAG_TRUSTED_FIRST
  flag on certificate stores when it is available.

- Issue #23576: Avoid stalling in SSL reads when EOF has been reached in the
  SSL layer but the underlying connection hasn't been closed.

- Issue #23504: Added an __all__ to the types module.

- Issue #23458: On POSIX, the file descriptor kept open by os.urandom() is now
  set to non inheritable

- Issue #22113: struct.pack_into() now supports new buffer protocol (in
  particular accepts writable memoryview).

- Issues #814253, #9179: Warnings now are raised when group references and
  conditional group references are used in lookbehind assertions in regular
  expressions.

- Issue #23215: Multibyte codecs with custom error handlers that ignores errors
  consumed too much memory and raised SystemError or MemoryError.
  Original patch by Aleksi Torhamo.

- Issue #5700: io.FileIO() called flush() after closing the file.
  flush() was not called in close() if closefd=False.

- Issue #21548: Fix pydoc.synopsis() and pydoc.apropos() on modules with empty
  docstrings.  Initial patch by Yuyang Guo.

- Issue #22885: Fixed arbitrary code execution vulnerability in the dumbdbm
  module.  Original patch by Claudiu Popa.

- Issue #23481: Remove RC4 from the SSL module's default cipher list.

- Issue #21849: Fixed xmlrpclib serialization of non-ASCII unicode strings in